Added the navigation with style

--- a/css/main.css
+++ b/css/main.css
@@ -35,11 +35,7 @@ img {
 
 /* Header */
 header#main-header {
-    display: flex;
-    width: 100vh;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    height: 100vh;
 }
 
 /* Navbar */
@@ -56,7 +52,35 @@ div.navbar {
     left: 0;
 }
 
+div.navbar nav ul {
+    display: flex;
+}
+
+div.navbar nav ul a {
+    padding: 10px 10px;
+}
+
+div.navbar nav ul a:hover {
+    border-bottom: #28a745 solid 3px;
+}
+
 div.navbar a {
     color: #fff;
 }
 
+div.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 100%;
+}
+
+div.content h1 {
+    font-size: 40px;
+}
+
+div.content p {
+    font-size: 22px;
+}
