--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,24 @@ img {
 
 /* Header */
 header#main-header {
+    background: url('../images/home/showcase.jpg') no-repeat center center/cover;
     height: 100vh;
+    color: #fff;
+    position: relative;
+}
+
+header#main-header::before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background-color: rgba(0, 0, 0, .5);
+}
+
+header#main-header * {
+    z-index: 10;
 }
 
 /* Navbar */
