--- a/css/main.css
+++ b/css/main.css
@@ -101,3 +101,17 @@ div.content h1 {
 div.content p {
     font-size: 22px;
 }
+
+/* Icon section */
+section.icons {
+    padding: 30px;
+    text-align: center;
+}
+
+section.icons i {
+    background-color: #28a745;
+    color: #fff;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 50%;
+}
