--- a/css/utilities.css
+++ b/css/utilities.css
@@ -38,4 +38,12 @@
 /* Flex rows */
 .flex-items {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 100%;
+}
+
+.flex-items > div {
+    padding: 20px;
 }
