--- a/css/utilities.css
+++ b/css/utilities.css
@@ -9,8 +9,8 @@
 
 /* Buttons */
 .btn {
-    display: block;
-    padding: 10px 18px;
+    display: inline-block;
+    padding: 10px 25px;
     background-color: #28a745;
     color: #fff;
     border: none;
@@ -18,8 +18,18 @@
     cursor: pointer;
 }
 
+.btn-outline {
+    background: transparent;
+    border: 1px solid #f4f4f4;
+}
+
 .btn:hover {
     opacity: .9;
+}
+
+.btn-Primary, .bg-primary {
+    background-color: #28a745;
+    color: #fff;
 }
 
 .btn-secondary, .bg-secondary {
@@ -46,4 +56,46 @@
 
 .flex-items > div {
     padding: 20px;
+}
+
+/* Flex Columns */
+.flex-columns .row {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.flex-columns .column {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+}
+
+.flex-columns .column .column-1,
+.flex-columns .column .column-2 {
+    height: 100%;
+}
+
+.flex-columns .column .column-1 img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+}
+
+.flex-columns .column .column-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 30px;
+}
+
+.flex-columns .column .column-2 h2 {
+    font-size: 34px;
+    padding: 15px 0;
+}
+
+.flex-columns .column.flex-reverse .row {
+    flex-direction: row-reverse;
 }
