--- a/css/main.css
+++ b/css/main.css
@@ -60,13 +60,17 @@ div.navbar {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgba(0, 0, 0, .5);
+    background: rgba(0, 0, 0, .5);
     width: 100%;
     height: 70px;
     padding: 0 30px;
     position: fixed;
     top: 0;
     left: 0;
+}
+
+.navbar.top {
+    background: transparent;
 }
 
 div.navbar nav ul {
